- added Path of the Elements subclass
- improved Crusher feat gui presentation
- improved custom recipes to use primed items whenever possible
- improved Path of the Spirits' wolf leadership